# slotflow-crm

./: .env.example  .gitignore  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Makefile  Procfile  Procfile.dev  README.md  RELEASES.md
backend/: CHANGELOG.md  Makefile  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/audit/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/config/: __init__.py  admin.py  celery.py  env.py  urls.py  version.py
backend/core/: api_active_workspace.py  api_auth.py  api_test_reset.py  auth_bypass.py  forms.py  logging.py  models.py  oauth_mfa.py  tasks.py  throttling.py  totp_qr.py  views.py
backend/fx/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/identity/: models.py
backend/insights/: services.py  urls.py  views.py
backend/interviews/: admin.py  models.py  permissions.py  serializers.py  services.py  step_resume_serializers.py  step_resume_urls.py  step_resume_views.py  urls.py  views.py
backend/invites/: adapters.py  admin.py  api.py  apps.py  models.py  urls.py
backend/mcp/: admin.py  apps.py  auth.py  models.py
backend/notifications/: models.py  serializers.py  services.py  urls.py  views.py
backend/opportunities/: admin.py  apps.py  models.py  opportunity_resume_serializers.py  opportunity_resume_urls.py  opportunity_resume_views.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/resumes/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
(+375 files in other folders)
