[project]
name = "slotflow-backend-bootstrap"
version = "0.0.0"
requires-python = ">=3.14"
description = "Backend bootstrap package for CI (Track 01). Django app lands in later tracks."

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["slotflow"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
